# pingnet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROMO_VIDEO.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  pingnet_roadmap.html  playwright.config.ts  run-dev.command  run-dev.ps1  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  command_history.rs  docker.rs  http_client.rs  keys.rs  lib.rs  local_pty.rs  main.rs  metrics.rs  ping.rs  ssh.rs  storage.rs  vpn.rs
src/components/: AddEditModal.tsx  DashboardView.tsx  DiagnosticConsole.tsx  HostDetailView.tsx  KeyManager.tsx  LatencyChart.tsx  LocalTerminalView.tsx  NetworkRoute.tsx  ShortcutsModal.tsx  Sidebar.tsx  UpdateModal.tsx  VpnBanner.tsx
src/components/ssh/: ABPartitionPanel.tsx  ApiClient.tsx  CommandHistory.tsx  DockerManager.tsx  MetricsPanel.tsx  PartitionManager.tsx  SFTPBrowser.tsx  SSHConnectModal.tsx  SSHSessionView.tsx  SSHTerminal.tsx  TransferQueue.tsx  dockerIcons.tsx
src/hooks/: usePing.ts  useTheme.ts  useUpdateCheck.ts
src/utils/: docker.ts  network.ts  partitionCommands.ts  partitions.ts  releaseNotes.ts  terminalThemes.ts
test-results/: .last-run.json
tests/: alert-state.spec.ts  docker.spec.ts  network.spec.ts  partitions.spec.ts  release-notes.spec.ts  terminal-themes.spec.ts
