[package]
name = "pingnet"
version = "0.4.2"
description = "Pingnet — a cross-platform ping testing app"
authors = []
edition = "2021"

[lib]
name = "pingnet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl", "openssl-on-win32"] }
tokio = { version = "1", features = ["full"] }
keyring = "2"
ssh-key = { version = "0.6", features = ["ed25519", "rand_core", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
dirs = "5"
tauri-plugin-dialog = "2"
ureq = { version = "2", features = ["json"] }
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
